syntax = "proto3";

package ai.lzy.v1.iam;

import "ai/lzy/v1/iam/iam.proto";

option java_outer_classname = "LABS";
option java_package = "ai.lzy.v1.iam";

service LzyAccessBindingService {
  rpc ListAccessBindings (ListAccessBindingsRequest) returns (ListAccessBindingsResponse);

  rpc SetAccessBindings (SetAccessBindingsRequest) returns (SetAccessBindingsResponse);

  rpc UpdateAccessBindings (UpdateAccessBindingsRequest) returns (UpdateAccessBindingsResponse);
}

message ListAccessBindingsRequest {
  Resource resource = 1;
}

message ListAccessBindingsResponse {
  repeated AccessBinding bindings = 1;
}

message SetAccessBindingsRequest {
  Resource resource = 1;
  repeated AccessBinding bindings = 2;
}

message SetAccessBindingsResponse {
}

message UpdateAccessBindingsRequest {
  Resource resource = 1;
  repeated AccessBindingDelta deltas = 2;
}

message UpdateAccessBindingsResponse {
}
